--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "express": "^4.15.2",
     "helmet": "^3.5.0",
     "lodash": "^4.17.4",
+    "mongoose": "^4.10.0",
     "morgan": "^1.8.1",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.2",
