--- a/package.json
+++ b/package.json
@@ -35,20 +35,25 @@
     "@angular/router": "^4.0.3",
     "@angular/upgrade": "^4.0.0",
     "autoprefixer": "^6.7.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "chalk": "^1.1.1",
+    "connect-mongo": "^1.3.2",
     "core-js": "^2.4.1",
     "eric-meyer-reset.scss": "^1.0.2",
     "es6-promise": "^4.1.0",
     "es6-shim": "^0.35.3",
     "express": "^4.15.2",
+    "express-session": "^1.15.3",
     "helmet": "^3.5.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.10.0",
     "morgan": "^1.8.1",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.3.0",
     "serve-favicon": "^2.4.2",
