--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "body-parser": "^1.17.1",
     "bootstrap": "^3.3.7",
     "chalk": "^1.1.1",
+    "cloudinary": "^1.9.0",
     "connect-mongo": "^1.3.2",
     "core-js": "^2.4.1",
     "eric-meyer-reset.scss": "^1.0.2",
