--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chalk": "^1.1.1",
     "cloudinary": "^1.9.0",
     "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "eric-meyer-reset.scss": "^1.0.2",
     "es6-promise": "^4.1.0",
@@ -55,9 +56,11 @@
     "node-sass": "^4.5.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
+    "passport.socketio": "^3.7.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.3.0",
     "serve-favicon": "^2.4.2",
+    "socket.io": "^2.0.2",
     "zone.js": "^0.8.5"
   },
   "devDependencies": {
