--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lodash": "^4.17.4",
     "mongoose": "^4.10.0",
     "morgan": "^1.8.1",
+    "ng2-progressbar": "^1.3.0",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.2",
     "passport": "^0.3.2",
