--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "mongoose": "^4.10.0",
     "morgan": "^1.8.1",
     "ng2-progressbar": "^1.3.0",
+    "node-buzz": "^1.1.4",
     "node-libs-browser": "^2.0.0",
     "node-sass": "^4.5.2",
     "passport": "^0.3.2",
